--- a/AsyncNats/AsyncNats.csproj
+++ b/AsyncNats/AsyncNats.csproj
@@ -7,16 +7,18 @@
     <AssemblyName>EightyDecibel.AsyncNats</AssemblyName>
     <RootNamespace>EightyDecibel.AsyncNats</RootNamespace>
     <Authors>80dB</Authors>
-    <Description>A Nats.io client written using C# 8.0 language options and task-driven design</Description>
+    <Description>A Nats.IO client specifically written with new C# features in mind. Internally it uses the new System.IO.Pipelines and System.Threading.Channels libraries that were released last year. It also uses the new IAsyncEnumerable as a way to listen to messages published to subjects.
+
+The end result is very fast Nats.io client that, in our opinion, fits the C# 8.0 language features better than the currently existing libraries.</Description>
     <Copyright>Copyright © 80dB</Copyright>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageProjectUrl>https://www.80db.nl</PackageProjectUrl>
-    <PackageIconUrl></PackageIconUrl>
+    <PackageIconUrl>https://www.80db.nl/Portals/0/80dB_logo.png?ver=2019-01-08-150719-797</PackageIconUrl>
     <RepositoryUrl>https://github.com/80dB/AsyncNats</RepositoryUrl>
     <PackageTags>async, nats.io</PackageTags>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <AssemblyVersion>0.1.0.0</AssemblyVersion>
-    <FileVersion>0.1.0.0</FileVersion>
+    <AssemblyVersion>0.2.0.0</AssemblyVersion>
+    <FileVersion>0.2.0.0</FileVersion>
     <Version>0.1.0</Version>
   </PropertyGroup>
 
