--- a/AsyncNats/AsyncNats.csproj
+++ b/AsyncNats/AsyncNats.csproj
@@ -21,6 +21,7 @@ The end result is very fast Nats.io client that, in our opinion, fits the C# 8.0
     <FileVersion>1.0.0</FileVersion>
     <Version>1.0.0</Version>
     <PackageIcon>logo.png</PackageIcon>
+    <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <ItemGroup>
